# RAGForge

./: .gitignore  config.json  pyproject.toml  readme.md  requirements.txt
apps/api/: api.py
apps/cli/: chat.py  cli.py  config.py  embed.py  upload.py
services/retrieval/: config.json  embed.py  retrieve.py
services/runtimes/: llm.py
src/api/: api.py
src/apps/api/: api.py
src/apps/cli/: chat.py  cli.py  config_cmds.py  embed.py  serve.py  upload.py
src/client/: chat.py  configs.py  database.py  main.py  serve.py  upload.py
src/core/: config.json  config.py  paths.py
src/server/: embedding.py  inference.py  retrieval.py
src/services/retrieval/: retrieve.py
src/services/runtimes/: llm.py
