[project]
name = "ragforge"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies =[
    "fastapi",
    "uvicorn",
    "ollama",
    "chromadb",
    "typer",
]

[project.scripts]
ragforge = "apps.cli.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]